testsuite/tests/grammar/invalid_skip/test.lkt
# Test that invalid uses of Skip parsers are properly rejected

from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- skip(Example)
}

@abstract class FooNode implements Node[FooNode] {
}

class Example : FooNode implements TokenNode {
}
